tests/valid-gd-scripts/multiline-dict-w-eq-sign.gd
var y = { name = 1 }			# fine
var x = {
	name = # parse errror
	1
}
