tests/invalid-gd-scripts/dict.gd
var mixed = {x = 2, 'y': 1}
